k8s/calculatrice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculatrice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculatrice
  template:
    metadata:
      labels:
        app: calculatrice
    spec:
      containers:
      - name: calculatrice
        image: calculatrice:v2
        ports:
        - containerPort: 5000
