k8s/statistiques-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistiques-service
spec:
  type: NodePort
  selector:
    app: statistiques
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 5000
